--- a/Driver/Driver_CD.html
+++ b/Driver/Driver_CD.html
@@ -41,7 +41,7 @@
             </tr>	
             <tr>
                 <td width="300" align="left" bgcolor="#95C9E8"><b>Usage Variances</b></td>
-                <td width="100" align="center" bgcolor="#95C9E8"><i><a href="YOY/CD/YOY_CD_UsageVar.html">link</a></i></td>
+                <td width="100" align="center" bgcolor="#95C9E8"></td>
                 <td width="100" align="center" bgcolor="#95C9E8"></td>
             </tr>	
             <tr>
@@ -66,12 +66,12 @@
             </tr>
             <tr>
                 <td align="left" bgcolor="#ffffff">CMB Restructures</td>
-                <td align="center" bgcolor="#ffffff"></td>
+                <td align="center" bgcolor="#ffffff"><i><a href="YOY/CD/YOY_CD_CMB.html">link</a></i></td>
                 <td align="center" bgcolor="#ffffff"></td>
             </tr>
             <tr>
                 <td align="left" bgcolor="#ffffff">Seq Ext Rest</td>
-                <td align="center" bgcolor="#ffffff"><i><a href="YOY/CD/YOY_CD_VolCount.html">link</a></i></td>
+                <td align="center" bgcolor="#ffffff"><i><a href="YOY/CD/YOY_CD_SeqExt.html">link</a></i></td>
                 <td align="center" bgcolor="#ffffff"></td>
             </tr>
             <tr>
@@ -81,7 +81,7 @@
             </tr>
             <tr>
                 <td align="left" bgcolor="#ffffff">Other Investments</td>
-                <td align="center" bgcolor="#ffffff"><i><a href="YOY/CD/YOY_CD_VolCount.html">link</a></i></td>
+                <td align="center" bgcolor="#ffffff"><i><a href="YOY/CD/YOY_CD_OthInvest.html">link</a></i></td>
                 <td align="center" bgcolor="#ffffff"></td>
             </tr>
             <tr>
@@ -136,22 +136,22 @@
             </tr>
             <tr>
                 <td align="left" bgcolor="#ffffff">Vacation</td>
-                <td align="center" bgcolor="#ffffff"><i><a href="YOY/CD/YOY_CD_Vacation.html">link</a></td>
+                <td align="center" bgcolor="#ffffff"><i><a href="YOY/CD/YOY_CD_Vacation.html">link</a></i></td>
                 <td align="center" bgcolor="#ffffff"></td>
             </tr>
             <tr>
                 <td align="left" bgcolor="#ffffff">Training & Union Leaves</td>
-                <td align="center" bgcolor="#ffffff"><i><a href="YOY/MP/YOY_MP_Training.html">link</a></td>
+                <td align="center" bgcolor="#ffffff"><i><a href="YOY/MP/YOY_MP_Training.html">link</a></i></td>
                 <td align="center" bgcolor="#ffffff"></td>
             </tr>
             <tr>
                 <td align="left" bgcolor="#ffffff">Stat Holidays</td>
-                <td align="center" bgcolor="#ffffff"><i><a href="YOY/CD/YOY_CD_Stat.html">link</a></td>
+                <td align="center" bgcolor="#ffffff"><i><a href="YOY/CD/YOY_CD_Stat.html">link</a></i></td>
                 <td align="center" bgcolor="#ffffff"></td>
             </tr>
             <tr>
                 <td align="left" bgcolor="#ffffff">Reorg & Coding</td>
-                <td align="center" bgcolor="#ffffff"><i><a href="YOY/CD/YOY_CD_Reorg.html">link</a></td>
+                <td align="center" bgcolor="#ffffff"><i><a href="YOY/CD/YOY_CD_Reorg.html">link</a></i></td>
                 <td align="center" bgcolor="#ffffff"></td>
             </tr>
             <tr>
@@ -166,22 +166,22 @@
             </tr>
             <tr>
                 <td align="left" bgcolor="#81A0CF" style="text-indent:10px">Transfers outside region/Others</td>
-                <td align="center" bgcolor="#81A0CF"><i><a href="YOY/CD/YOY_CD_TransfersOutsideRegion.html">link</a></td>
+                <td align="center" bgcolor="#81A0CF"><i><a href="YOY/CD/YOY_CD_TransfersOutsideRegion.html">link</a></i></td>
                 <td align="center" bgcolor="#81A0CF"></td>
             </tr>
             <tr>
                 <td align="left" bgcolor="#95C9E8"><b>Rate Variances</b></td>
-                <td align="center" bgcolor="#95C9E8"><i><a href="YOY/CD/YOY_CD_RateVar.html">link</a></td>
+                <td align="center" bgcolor="#95C9E8"></td>
                 <td align="center" bgcolor="#95C9E8"></td>
             </tr>	
             <tr>
                 <td align="left" bgcolor="#ffffff">Wage Increase</td>
-                <td align="center" bgcolor="#ffffff"><i><a href="YOY/CD/YOY_CD_Wage.html">link</a></td>
+                <td align="center" bgcolor="#ffffff"><i><a href="YOY/CD/YOY_CD_Wage.html">link</a></i></td>
                 <td align="center" bgcolor="#ffffff"></td>
             </tr>
             <tr>
                 <td align="left" bgcolor="#ffffff">Rate Other</td>
-                <td align="center" bgcolor="#ffffff"><i><a href="YOY/CD/YOY_CD_RateOther.html">link</a></td>
+                <td align="center" bgcolor="#ffffff"><i><a href="YOY/CD/YOY_CD_RateOther.html">link</a></i></td>
                 <td align="center" bgcolor="#ffffff"></td>
             </tr>
             <tr>
@@ -191,49 +191,49 @@
             </tr>
             <tr>
                 <td align="left" bgcolor="#ffffff">Allowances / Other</td>
-                <td align="center" bgcolor="#ffffff"><i><a href="YOY/CD/YOY_CD_Allowances.html">link</a></td>
+                <td align="center" bgcolor="#ffffff"><i><a href="YOY/CD/YOY_CD_Allowances.html">link</a></i></td>
                 <td align="center" bgcolor="#ffffff"></td>
             </tr>
             <tr>
                 <td align="left" bgcolor="#81A0CF" style="text-indent:10px">Householder Bonus</td>
-                <td align="center" bgcolor="#81A0CF"><i><a href="YOY/CD/YOY_CD_Householder.html">link</a></td>
+                <td align="center" bgcolor="#81A0CF"><i><a href="YOY/CD/YOY_CD_Householder.html">link</a></i></td>
                 <td align="center" bgcolor="#81A0CF"></td>
             </tr>
             <tr>
                 <td align="left" bgcolor="#81A0CF" style="text-indent:10px">Remaining Allowances</td>
-                <td align="center" bgcolor="#81A0CF"><i><a href="YOY/CD/YOY_CD_RemainAllow.html">link</a></td>
+                <td align="center" bgcolor="#81A0CF"><i><a href="YOY/CD/YOY_CD_RemainAllow.html">link</a></i></td>
                 <td align="center" bgcolor="#81A0CF"></td>
             </tr>
             <tr>
                 <td align="left" bgcolor="#81A0CF" style="text-indent:10px">Grievances / Pay inlieu</td>
-                <td align="center" bgcolor="#81A0CF"><i><a href="YOY/CD/YOY_CD_Grievances.html">link</a></td>
+                <td align="center" bgcolor="#81A0CF"><i><a href="YOY/CD/YOY_CD_Grievances.html">link</a></i></td>
                 <td align="center" bgcolor="#81A0CF"></td>
             </tr>
             <tr>
                 <td align="left" bgcolor="#81A0CF"style="text-indent:10px">Other Cost Pressures / Savings</td>
-                <td align="center" bgcolor="#81A0CF"><i><a href="YOY/CD/YOY_CD_OtherCostPressures.html">link</a></td>
+                <td align="center" bgcolor="#81A0CF"><i><a href="YOY/CD/YOY_CD_OtherCostPressures.html">link</a></i></td>
                 <td align="center" bgcolor="#81A0CF"></td>
             </tr>	
             <tr>
                 <td align="left" bgcolor="#95C9E8"><b>Days Variances</b></td>
-                <td align="center" bgcolor="#95C9E8"><i><a href="YOY/CD/YOY_CD_DaysVar.html">link</a></td>
+                <td align="center" bgcolor="#95C9E8"></td>
                 <td align="center" bgcolor="#95C9E8"></td>
             </tr>
             <tr>
                 <td align="left" bgcolor="#ffffff">Days Adjustments</td>
-                <td align="center" bgcolor="#ffffff"><i><a href="YOY/CD/YOY_CD_Days.html">link</a></td>
+                <td align="center" bgcolor="#ffffff"><i><a href="YOY/CD/YOY_CD_Days.html">link</a></i></td>
                 <td align="center" bgcolor="#ffffff"></td>
             </tr>
             <tr>
                 <td align="left" bgcolor="#ffffff">Trade Days Adj</td>
-                <td align="center" bgcolor="#ffffff"><i><a href="YOY/CD/YOY_CD_TradeDays.html">link</a></td>
+                <td align="center" bgcolor="#ffffff"><i><a href="YOY/CD/YOY_CD_TradeDays.html">link</a></i></td>
                 <td align="center" bgcolor="#ffffff"></td>
             </tr>
-            <tr>
+            <!-- <tr>
                 <td align="left" bgcolor="#95C9E8"><b>Total Variances</b></td>
-                <td align="center" bgcolor="#95C9E8"><i><a href="YOY/CD/YOY_CD_TotalVar.html">link</a></td>
                 <td align="center" bgcolor="#95C9E8"></td>
-            </tr>
+                <td align="center" bgcolor="#95C9E8"></td>
+            </tr> -->
         </TABLE>
     </font>
 </body>	
