--- a/Driver/YOY/CD/YOY_CD_OtherCostPressures.html
+++ b/Driver/YOY/CD/YOY_CD_OtherCostPressures.html
@@ -64,7 +64,8 @@
             <td class = "style3"> YOY Dollars  </td></tr>	
       </Table>														
     <p class = "eq">
-        <i>Value = <b><a href="../../../Dollars/MP/HHBonus/D_MP_HHBonus_RR.html">[Householder Bonus - Residual Rate & Allowances]</a>
+        <i>Value = - <b><a href="../../../Dollars/MP/HHBonus/D_MP_HHBonus_RR.html">[Householder Bonus - Residual Rate & Allowances - MP]</a>
+            - <b><a href="../../../Dollars/CO/HHBonus/D_CO_HHBonus_RR.html">[Householder Bonus - Residual Rate & Allowances - CO]</a>
         </b></i>
     </p>													
 </body>	
