--- a/Driver/YOY/CD/YOY_CD_SeqMotor.html
+++ b/Driver/YOY/CD/YOY_CD_SeqMotor.html
@@ -58,19 +58,40 @@
           <td class = "style3">Collection & Delivery</td></tr>								
         <tr class = "style2">
           <td class = "style3" align = "right"><b>Line Item:</b></td>
-          <td class = "style3">Seq-Motor Restructures  </td></tr>	
+          <td class = "style3">Seq-Motor Restructures</td></tr>		
         <tr class = "style2">
             <td class = "style3" align = "right"><b>Data Type:</b></td>
-            <td class = "style3">YOY Dollars</td></tr>	
+            <td class = "style3">YOY Dollars</td></tr>
       </Table>														
     <p class = "eq">
-        <i>Value = <b><a href="../../../Dollars/MP/HoursWorked/D_MP_HrWk_Days.html">[Hours Worked - Days Adjustments]</a>
-        + <a href="../../../Dollars/MP/Absences/D_MP_PdAbs_Days.html">[Absences - Days Adjustments]</a>
-        + <a href="../../../Dollars/MP/Vacation/D_MP_Vac_Days.html">[Vacation - Days Adjustments]</a>
-        + <a href="../../../Dollars/MP/Training+UnionLeaves/D_MP_Train_Days.html">[Training & Union Leaves - Days Adjustments]</a>
-        + <a href="../../../Dollars/MP/StatHolidays/D_MP_Stat_Days.html">[Stat Holidays - Days Adjustments]</a>
-        + <a href="../../../Dollars/MP/OtherAllow/D_MP_othAllw_NPHW.html">[Sh Diff, WE Prem & Others - Days Adjustments]</a>       
-        </b></i>
-    </p>													
+        <i>Value = <b>	- <a href="../../../Reference/Adjustments.html">[Adjustments]</a> </b></i>	
+    </p>
+    <TABLE>															
+        <tr>	
+            <td>	<i>Name</i>	</td>	
+            <td>	<i>Fiscal Year</i>	</td>	
+            <td>	<i>Act Group</i>	</td>	
+            <td>	<i>SubDriver</i>	</td>	
+            <td>  <i>Hours or Dollars</i></td>
+        </tr>
+        <tr>
+            <td>	[Adjustments]	</td>	
+          <td>  TY	</td>	
+          <td>	CD	</td>	
+          <td>  Seq-Motor Restructures	</td>
+          <td>  Dollars </td>
+        </tr>
+      </table>	
+    <p>
+        <i>The CD Act Group contains the Act Sub Groups LC, LCA and MSC </i>
+    </p>							
+      <p>															
+        <b>Further Links:</b>	
+        <br>														
+        <a href="../../../Reference/GLCEGrp_Dollars.html">[GLCE Group]</a>
+        <br>														
+        <a href="../../../Reference/HoursNonHoursSplit.html">[Hours vs Non Hours Split]</a>	
+        <br>
+        <a href="../../../Reference/ActGrp.html">[Act Group]</a>																			
+      </p>															
 </body>	
-</html>
