--- a/Hours/CO/Absences/H_CO_PdAbs_RetailHrs.html
+++ b/Hours/CO/Absences/H_CO_PdAbs_RetailHrs.html
@@ -1,39 +1,112 @@
+<!DOCTYPE html>
+<html>
+<head>
+    <ul>
+        <li><b>Direct Labour Model Methodology</b></li>
+        <li class="dropdown">
+            <a href="javascript:void(0)" class="dropbtn">Drivers</a>
+            <div class="dropdown-content">
+                <a href="../../../Driver/Driver_MP.html">Mail processing</a>
+                <a href="../../../Driver/Driver_CD.html">Collection & Delivery</a>
+                <a href="../../../Driver/Driver_CO.html">Counter Operations</a>
+            </div>
+        </li>
+        <li class="dropdown">
+            <a href="javascript:void(0)" class="dropbtn">Dollars Matrix</a>
+            <div class="dropdown-content">
+                <a href="../../../Dollars/DollarMatrix_MP.html">Mail processing</a>
+                <a href="../../../Dollars/DollarMatrix_CD.html">Collection & Delivery</a>
+                <a href="../../../Dollars/DollarMatrix_CO.html">Counter Operations</a>
+            </div>
+        </li>
+        <li class="dropdown">
+            <a href="javascript:void(0)" class="dropbtn">Hours Matrix</a>
+            <div class="dropdown-content">
+                <a href="../../../Hours/HourMatrix_MP.html">Mail processing</a>
+                <a href="../../../Hours/HourMatrix_CD.html">Collection & Delivery</a>
+                <a href="../../../Hours/HourMatrix_CO.html">Counter Operations</a>
+            </div>
+        </li>
+        <li class="dropdown">
+          <a href="javascript:void(0)" class="dropbtn">Reference</a>
+          <div class="dropdown-content">
+              <a href="../../../Reference/ActGrp.html">Act Group</a>
+              <a href="../../../Reference/Adjustments.html">Adjustments</a>
+              <a href="../../../Reference/AllocationRates.html">Allocation Rates</a>
+              <a href="../../../Reference/Dollars.html">BW Dollars</a>
+              <a href="../../../Reference/GLCEGrp_Dollars.html">GLCE Group (Dollars)</a>
+              <a href="../../../Reference/GLCEGrp_Hours.html">GLCE Group (Hours)</a>
+              <a href="../../../Reference/Hours.html">BW Hours</a>
+              <a href="../../../Reference/HoursNonHoursSplit.html">Hours v Non Hours Related</a>
+              <a href="../../../Reference/LYPaidRate.html">LY Paid Rate</a>
+              <a href="../../../Reference/Plant_NonPlant.html">Plant v Non Plant</a>
+              <a href="../../../Reference/TimeGroup_Dollars.html">Time Group (Dollars)</a>
+              <a href="../../../Reference/TimeGroup_Hours.html">Time Group (Hours)</a>
+              <a href="../../../Reference/WageIncrease.html">Wage Increase</a>
+          </div>
+      </li>
+    </ul>
+    <link rel="stylesheet" href="../../../style.css" />
+</head>
 <body>
-<font face="Arial" size ="3">															
-  <b>Tab: </b>	GM Matrix	<br>	
-  <b>Table: </b>	Counter Operations	<br>														
-  <b>Data Type: </b>	Hours	<br>													
-  <b>Row: </b>	Absences	<br>													
-  <b>Column: </b>	Retail Hours	<br>													
-  <br>
-</font>															
-<font face="Times New Roman" size ="4">															
-  <i>Value = <b>	[Retail Hours Worked] * [Absences Allocation Rate] </b></i>	
-  <br>													
-<br></font>															
-<font face="Arial" size ="3">															
-  <TABLE BORDER="1" CELLPADDING="2" CELLSPACING="0">															
-    <tr>	
-      <td width = "200">	<i>Name</i>	</td>	
-      <td width = "100">	<i>Act Type</i>	</td>	
-    </tr>
-    <tr>	
-      <td width = "200">	[Absences Allocation Rate]	</td>	
-      <td width = "100">	CO	</td>	
-    </tr>
-  </table>
-</font>
-<br>
-<br>														
-															
-<font face="Arial" size ="3">															
-  <b>Further Links:</b>	
-  <br>														
-  <a href="../HoursWorked/H_CO_HrWk_RetailHrs.html">[Retail Hours Worked]</a>	
-  <br>														
-  <a href="../../../Reference/AllocationRates.html">[Absences Allocation Rate]</a>					
-  <br>
-  <br>
-  <a href="../../GMMatrix_Hours.html">Back To GM Matrix</a>																				
-</font>															
-</body>															
+  <Table class = "style2">
+    <tr class = "style2">
+      <td class = "style3" align = "right"><b>Tab:</b></td>
+      <td class = "style3">Matrix</td></tr>
+    <tr class = "style2">
+      <td class = "style3" align = "right"><b>Table:</b></td>
+      <td class = "style3">Counter Operations</td></tr>								
+    <tr class = "style2">
+      <td class = "style3" align = "right"><b>Data Type:</b></td>
+      <td class = "style3">Hours</td></tr>	
+    <tr class = "style2">
+      <td class = "style3" align = "right"><b>Row:</b></td>
+      <td class = "style3">Absences</td></tr>	
+    <tr class = "style2">
+      <td class = "style3" align = "right"><b>Column:</b></td>
+      <td class = "style3">Retail Hours</td></tr>	
+  </Table>																											
+  <p class = "eq">															
+      <i>Value = <b>	<a href="../../../Reference/Hours.html">[PYHours]</a>	 
+        - <a href="../../../Reference/Hours.html">[CYHours]</a>	
+        + <a href="../../../Reference/Adjustments.html">[Adjustments]</a>	 </b></i>	
+  </p>																												
+      <TABLE>															
+        <tr>	
+          <td>	<i>Name</i>	</td>	
+          <td>	<i>Fiscal Year</i>	</td>	
+          <td>	<i>Time Group</i>	</td>	
+          <td>	<i>Act Group</i>	</td>	
+          <td>	<i>SubDriver</i>	</td>
+        </tr>
+        <tr>	
+          <td>	[PYHours]	</td>	
+          <td>  Previous Year	</td>	
+          <td>  PdAbs	</td>	
+          <td>	CO	</td>	
+          <td>	n/a	</td>
+        </tr>
+        <tr>	
+          <td>	[CYHours]	</td>	
+          <td>  Current Year	</td>	
+          <td>	PdAbs	</td>	
+          <td>	CO	</td>	
+          <td>	n/a	</td>
+        </tr>
+        <tr>	
+          <td>	[Adjustments]	</td>	
+          <td>  n/a	</td>	
+          <td>	PdAbs	</td>	
+          <td>	CO	</td>	
+          <td>	All	</td>
+        </tr>
+      </table>											                          
+    <p>															
+      <b>Further Links:</b>	
+      <br>			
+      <a href="../../../Reference/TimeGroup_Hours.html">[Time Group]</a>
+      <br>			
+      <a href="../../../Reference/ActGrp.html">[Act Group]</a>																	
+    </p>															
+  </body>															
+  </html>
