--- a/Driver/Driver_CO.html
+++ b/Driver/Driver_CO.html
@@ -6,25 +6,25 @@
         <li class="dropdown">
             <a href="javascript:void(0)" class="dropbtn">Drivers</a>
             <div class="dropdown-content">
-                <a href="../ByGM/ByGMView.html">Mail processing</a>
-                <a href="../ByGM/ByGMView.html">Collection & Delivery</a>
-                <a href="../ByGM/ByGMView.html">Counter Operations</a>
+                <a href="../Driver/Driver_MP.html">Mail processing</a>
+                <a href="../Driver/Driver_CD.html">Collection & Delivery</a>
+                <a href="../Driver/Driver_CO.html">Counter Operations</a>
             </div>
         </li>
         <li class="dropdown">
             <a href="javascript:void(0)" class="dropbtn">Dollars Matrix</a>
             <div class="dropdown-content">
-                <a href="../Dollars/GMMatrix_Dollars.html">Mail processing</a>
-                <a href="../Dollars/GMMatrix_Dollars.html">Collection & Delivery</a>
-                <a href="../Dollars/GMMatrix_Dollars.html">Counter Operations</a>
+                <a href="../Dollars/DollarMatrix_MP.html">Mail processing</a>
+                <a href="../Dollars/DollarMatrix_CD.html">Collection & Delivery</a>
+                <a href="../Dollars/DollarMatrix_CO.html">Counter Operations</a>
             </div>
         </li>
         <li class="dropdown">
             <a href="javascript:void(0)" class="dropbtn">Hours Matrix</a>
             <div class="dropdown-content">
-                <a href="../Hours/GMMatrix_Hours.html">Mail processing</a>
-                <a href="../Hours/GMMatrix_Hours.html">Collection & Delivery</a>
-                <a href="../Hours/GMMatrix_Hours.html">Counter Operations</a>
+                <a href="../Hours/HourMatrix_MP.html">Mail processing</a>
+                <a href="../Hours/HourMatrix_CD.html">Collection & Delivery</a>
+                <a href="../Hours/HourMatrix_CO.html">Counter Operations</a>
             </div>
         </li>
     </ul>
@@ -35,83 +35,43 @@
     <font face="Century Gothic" size ="2" color="black">
         <TABLE>	
             <tr>
-                <th><b>MAIL PROCESSING</b></th>
+                <th><b>Counter Operations</b></th>
                 <th><b>YOY Dollars</b></th>
                 <th><b>YOY Plan Var</b></th>
             </tr>	
             <tr>
                 <td width="300" align="left" bgcolor="#95C9E8"><b>Usage Variances</b></td>
-                <td width="100" align="center" bgcolor="#95C9E8"><i><a href="YOY/MP/YOY_MP_UsageVar.html">link</a></i></td>
+                <td width="100" align="center" bgcolor="#95C9E8"></td>
                 <td width="100" align="center" bgcolor="#95C9E8"></td>
             </tr>	
             <tr>
-                <td align="left" bgcolor="#ffffff">Plant (Hours Worked)</td>
+                <td align="left" bgcolor="#ffffff">Retail Hours</td>
+                <td align="center" bgcolor="#ffffff"><i><a href="YOY/CO/YOY_CO_RetailHours.html">link</a></i></td>
+                <td align="center" bgcolor="#ffffff"></td>
+            </tr>
+            <tr>
+                <td align="left" bgcolor="#ffffff">Retail Initiatives</td>
                 <td align="center" bgcolor="#ffffff"><i><a href="YOY/MP/YOY_MP_PlantHoursWorked.html">link</a></i></td>
                 <td align="center" bgcolor="#ffffff"></td>
             </tr>
             <tr>
-                <td align="left" bgcolor="#81A0CF" style="text-indent:10px">Plant Performance & Labour Mix</td>
-                <td align="center" bgcolor="#81A0CF"><i><a href="YOY/MP/YOY_MP_PlantPerformance.html">link</a></i></td>
-                <td align="center" bgcolor="#81A0CF"></td>
-            </tr>
-            <tr>
-                <td align="left" bgcolor="#81A0CF" style="text-indent:10px">MP Plant Initiatives</td>
-                <td align="center" bgcolor="#81A0CF"></td>
-                <td align="center" bgcolor="#81A0CF"></td>
-            </tr>
-            <tr>
-                <td align="left" bgcolor="#81A0CF" style="text-indent:10px">Plant Volume Mix</td>
-                <td align="center" bgcolor="#81A0CF"></td>
-                <td align="center" bgcolor="#81A0CF"></td>
-            </tr>
-            <tr>
-                <td align="left" bgcolor="#81A0CF" style="text-indent:10px">Other Investments</td>
-                <td align="center" bgcolor="#81A0CF"></td>
-                <td align="center" bgcolor="#81A0CF"></td>
-            </tr>
-            <tr>
-                <td align="left" bgcolor="#ffffff">Non Plant (Hours Worked)</td>
-                <td align="center" bgcolor="#ffffff"><i><a href="YOY/MP/YOY_MP_NonPlantHoursWorked.html">link</a></i></td>
-                <td align="center" bgcolor="#ffffff"></td>
-            </tr>
-            <tr>
-                <td align="left" bgcolor="#81A0CF" style="text-indent:10px">Non-Plant Performance & Labour Mix</td>
-                <td align="center" bgcolor="#81A0CF"><i><a href="YOY/MP/YOY_MP_NonPlantPerformance.html">link</a></i></td>
-                <td align="center" bgcolor="#81A0CF"></td>
-            </tr>
-            <tr>
-                <td align="left" bgcolor="#81A0CF" style="text-indent:10px">Other Investment Benefits - MP Non-Plant</td>
-                <td align="center" bgcolor="#81A0CF"></td>
-                <td align="center" bgcolor="#81A0CF"></td>
-            </tr>
-            <tr>
-                <td align="left" bgcolor="#81A0CF" style="text-indent:10px">MP Non-Plant Initiatives</td>
-                <td align="center" bgcolor="#81A0CF"></td>
-                <td align="center" bgcolor="#81A0CF"></td>
-            </tr>
-            <tr>
-                <td align="left" bgcolor="#81A0CF" style="text-indent:10px">MP Non-Plant Volume / Mix</td>
-                <td align="center" bgcolor="#81A0CF"></td>
-                <td align="center" bgcolor="#81A0CF"></td>
-            </tr>
-            <tr>
-                <td align="left" bgcolor="#ffffff">Investment - Transaction Costs</td>
-                <td align="center" bgcolor="#ffffff"></td>
+                <td align="left" bgcolor="#ffffff">Other Investments</td>
+                <td align="center" bgcolor="#ffffff"><i><a href="YOY/MP/YOY_MP_PlantHoursWorked.html">link</a></i></td>
                 <td align="center" bgcolor="#ffffff"></td>
             </tr>
             <tr>
                 <td align="left" bgcolor="#ffffff">Absences</td>
-                <td align="center" bgcolor="#ffffff"><i><a href="YOY/MP/YOY_MP_Absences.html">link</a></td>
+                <td align="center" bgcolor="#ffffff"><i><a href="YOY/CO/YOY_CO_Absences.html">link</a></i></td>
                 <td align="center" bgcolor="#ffffff"></td>
             </tr>
             <tr>
                 <td align="left" bgcolor="#81A0CF" style="text-indent:10px">Absence Hours</td>
-                <td align="center" bgcolor="#81A0CF"><i><a href="YOY/MP/YOY_MP_AbsenceHours.html">link</a></td>
+                <td align="center" bgcolor="#81A0CF"><i><a href="YOY/CO/YOY_CO_AbsenceHours.html">link</a></i></td>
                 <td align="center" bgcolor="#81A0CF"></td>
             </tr>
             <tr>
                 <td align="left" bgcolor="#81A0CF" style="text-indent:10px">STDP PD Payout / Accrual</td>
-                <td align="center" bgcolor="#81A0CF"><i><a href="YOY/MP/YOY_MP_STDP.html">link</a></td>
+                <td align="center" bgcolor="#81A0CF"><i><a href="YOY/CO/YOY_CO_STDP.html">link</a></i></td>
                 <td align="center" bgcolor="#81A0CF"></td>
             </tr>
             <tr>
@@ -151,7 +111,7 @@
             </tr>
             <tr>
                 <td align="left" bgcolor="#95C9E8"><b>Rate Variances</b></td>
-                <td align="center" bgcolor="#95C9E8"><i><a href="YOY/MP/YOY_MP_RateVar.html">link</a></td>
+                <td align="center" bgcolor="#95C9E8"></td>
                 <td align="center" bgcolor="#95C9E8"></td>
             </tr>	
             <tr>
@@ -191,12 +151,12 @@
             </tr>	
             <tr>
                 <td align="left" bgcolor="#95C9E8"><b>Days Variances</b></td>
-                <td align="center" bgcolor="#95C9E8"><i><a href="YOY/MP/YOY_MP_DaysVar.html">link</a></td>
+                <td align="center" bgcolor="#95C9E8"></td>
                 <td align="center" bgcolor="#95C9E8"></td>
             </tr>
             <tr>
                 <td align="left" bgcolor="#ffffff">Days Adjustments</td>
-                <td align="center" bgcolor="#ffffff"><i><a href="YOY/MP/YOY_MP_Days.html">link</a></td>
+                <td align="center" bgcolor="#ffffff"><i><a href="YOY/CO/YOY_CO_Days.html">link</a></i></td>
                 <td align="center" bgcolor="#ffffff"></td>
             </tr>
             <tr>
@@ -206,7 +166,7 @@
             </tr>
             <tr>
                 <td align="left" bgcolor="#95C9E8"><b>Total Variances</b></td>
-                <td align="center" bgcolor="#95C9E8"><i><a href="YOY/MP/YOY_MP_TotalVar.html">link</a></td>
+                <td align="center" bgcolor="#95C9E8"><i></td>
                 <td align="center" bgcolor="#95C9E8"></td>
             </tr>
         </TABLE>
