--- a/Driver/YOY/MP/YOY_MP_RateVar.html
+++ b/Driver/YOY/MP/YOY_MP_RateVar.html
@@ -52,7 +52,7 @@
     <Table class = "style2">
         <tr class = "style2">
           <td class = "style3" align = "right"><b>Tab:</b></td>
-          <td class = "style3">ByGM</td></tr>
+          <td class = "style3">Driver</td></tr>
         <tr class = "style2">
           <td class = "style3" align = "right"><b>Table:</b></td>
           <td class = "style3">Mail Processing</td></tr>								
