--- a/Hours/CO/Vacation/H_CO_Vac_Reorg.html
+++ b/Hours/CO/Vacation/H_CO_Vac_Reorg.html
@@ -1,44 +1,89 @@
+<!DOCTYPE html>
+<html>
+<head>
+    <ul>
+        <li><b>Direct Labour Model Methodology</b></li>
+        <li class="dropdown">
+            <a href="javascript:void(0)" class="dropbtn">Drivers</a>
+            <div class="dropdown-content">
+                <a href="../../../Driver/Driver_MP.html">Mail processing</a>
+                <a href="../../../Driver/Driver_CD.html">Collection & Delivery</a>
+                <a href="../../../Driver/Driver_CO.html">Counter Operations</a>
+            </div>
+        </li>
+        <li class="dropdown">
+            <a href="javascript:void(0)" class="dropbtn">Dollars Matrix</a>
+            <div class="dropdown-content">
+                <a href="../../../Dollars/DollarMatrix_MP.html">Mail processing</a>
+                <a href="../../../Dollars/DollarMatrix_CD.html">Collection & Delivery</a>
+                <a href="../../../Dollars/DollarMatrix_CO.html">Counter Operations</a>
+            </div>
+        </li>
+        <li class="dropdown">
+            <a href="javascript:void(0)" class="dropbtn">Hours Matrix</a>
+            <div class="dropdown-content">
+                <a href="../../../Hours/HourMatrix_MP.html">Mail processing</a>
+                <a href="../../../Hours/HourMatrix_CD.html">Collection & Delivery</a>
+                <a href="../../../Hours/HourMatrix_CO.html">Counter Operations</a>
+            </div>
+        </li>
+        <li class="dropdown">
+          <a href="javascript:void(0)" class="dropbtn">Reference</a>
+          <div class="dropdown-content">
+              <a href="../../../Reference/ActGrp.html">Act Group</a>
+              <a href="../../../Reference/Adjustments.html">Adjustments</a>
+              <a href="../../../Reference/AllocationRates.html">Allocation Rates</a>
+              <a href="../../../Reference/Dollars.html">BW Dollars</a>
+              <a href="../../../Reference/GLCEGrp_Dollars.html">GLCE Group (Dollars)</a>
+              <a href="../../../Reference/GLCEGrp_Hours.html">GLCE Group (Hours)</a>
+              <a href="../../../Reference/Hours.html">BW Hours</a>
+              <a href="../../../Reference/HoursNonHoursSplit.html">Hours v Non Hours Related</a>
+              <a href="../../../Reference/LYPaidRate.html">LY Paid Rate</a>
+              <a href="../../../Reference/Plant_NonPlant.html">Plant v Non Plant</a>
+              <a href="../../../Reference/TimeGroup_Dollars.html">Time Group (Dollars)</a>
+              <a href="../../../Reference/TimeGroup_Hours.html">Time Group (Hours)</a>
+              <a href="../../../Reference/WageIncrease.html">Wage Increase</a>
+          </div>
+      </li>
+    </ul>
+    <link rel="stylesheet" href="../../../style.css" />
+</head>
 <body>
-<font face="Arial" size ="3">															
-  <b>Tab: </b>	GM Matrix	<br>	
-  <b>Table: </b>	Counter Operations	<br>														
-  <b>Data Type: </b>	Hours	<br>													
-  <b>Row: </b>	Vacation	<br>													
-  <b>Column: </b>	Reorg & Coding <br>													
-  <br>
-</font>															
-<font face="Times New Roman" size ="4">															
-  <i>Value = <b>	- [Adjustments] </b></i>	
-  <br>													
-  <br>
-</font>															
-<font face="Arial" size ="3">															
-  <TABLE BORDER="1" CELLPADDING="2" CELLSPACING="0">															
-    <tr>	
-      <td width = "100">	<i>Name</i>	</td>	
-      <td width = "100">	<i>Time Group</i>	</td>	
-      <td width = "100">	<i>Act Type</i>	</td>	
-      <td width = "150">	<i>Driver</i>	</td>
-      <td width = "150">  <i>Hours or Dollars</i> </td>
-    </tr>
-    <tr>	
-      <td width = "100">	[Adjustments]	</td>	
-      <td width = "100">  Vacation	</td>	
-      <td width = "100">	CO	</td>	
-      <td width = "150">	Reorg	</td>
-      <td>Hours</td>
-    </tr>
-  </table>
-</font>
-<br>
-<br>															
-															
-<font face="Arial" size ="3">															
-  <b>Further Links:</b>	
-  <br>																											
-  <a href="../../../Reference/Adjustments.html">[Adjustments]</a>			
-  <br>
-  <br>
-  <a href="../../GMMatrix_Hours.html">Back To GM Matrix</a>																							
-</font>															
-</body>															
+  <Table class = "style2">
+    <tr class = "style2">
+      <td class = "style3" align = "right"><b>Tab:</b></td>
+      <td class = "style3">Matrix</td></tr>
+    <tr class = "style2">
+      <td class = "style3" align = "right"><b>Table:</b></td>
+      <td class = "style3">Counter Operations</td></tr>								
+    <tr class = "style2">
+      <td class = "style3" align = "right"><b>Data Type:</b></td>
+      <td class = "style3">Hours</td></tr>	
+    <tr class = "style2">
+      <td class = "style3" align = "right"><b>Row:</b></td>
+      <td class = "style3">Vacation</td></tr>	
+    <tr class = "style2">
+      <td class = "style3" align = "right"><b>Column:</b></td>
+      <td class = "style3">Reorg & Coding</td></tr>	
+  </Table>																											
+  <p class = "eq">													
+    <i>Value = <b>	- <a href="../../../Reference/Adjustments.html">[Adjustments]</a>	 </b></i>	
+  </p>																														
+    <TABLE>															
+      <tr>	
+        <td>	<i>Name</i>	</td>	
+        <td>	<i>Time Group</i>	</td>	
+        <td>	<i>Act Type</i>	</td>	
+        <td>	<i>SubDriver</i>	</td>
+        <td>	<i>Hours or Dollars</i>	</td>
+      </tr>
+      <tr>	
+        <td>	[Adjustments]	</td>	
+        <td>	Vacation	</td>	
+        <td>	CO	</td>		
+        <td>	Reorg	</td>
+        <td>Hours</td>
+      </tr>
+    </table>														
+</body>	
+</html>
